# HiveHashTable

./: .gitignore  Makefile  Readme.md
UniformHashFunction/: CMakeLists.txt  README.md  plot_csr.py
UniformHashFunction/include/: HashTable.h  KeyValuePair.h  Utility.h  alignment.h  experiment_kernel.h  hash_function.h  pthreadErrors.h  tException.h  tStats.h  tTabularResults.h  tTimer.h  utils.h  vector_add.h
UniformHashFunction/src/: alignment.cpp  experiment_kernel.cu  hash_function.cu  main.cpp  utils.cpp  vector_add.cu
UniformHashFunction/tests/: chartGenerate.py  test_utils.cpp  test_vector_add.cu
benchmark/: hive_lookup_only_benchmark.cpp  hive_table_benchmark.cpp  ycsb_benchmark.cpp
competitors/BGHT_IHT/: CMakeLists.txt  rebuild.sh
competitors/BGHT_IHT/benchmarks/: probes_per_technique.cu  rates_per_technique_fixed_lf.cu
competitors/BGHT_IHT/scripts/: benchmark.sh
competitors/DyCuckoo/dynamicHash/: CMakeLists.txt
competitors/DyCuckoo/dynamicHash/core/: dynamic_cuckoo.cuh  dynamic_hash.cuh  static_cuckoo.cuh
competitors/DyCuckoo/dynamicHash/data/: data_layout.cuh  gen_data  generate_data.cpp  key_generator.h
competitors/DyCuckoo/dynamicHash/include/Common/: helper_cuda_drvapi.h
competitors/DyCuckoo/dynamicHash/test/: dynamic_test.cu  static_test.cu
competitors/DyCuckoo/dynamicHash/tools/: gputimer.h
competitors/DyCuckoo/dynamicHash_lock/: CMakeLists.txt
competitors/SlabHash/: CMakeLists.txt
competitors/SlabHash/bench/: CMakeLists.txt  bencher.py  experiments.cuh  main_benchmarks.cu  out_31-01-2026_20-22-57.json  out_31-01-2026_20-23-05.json  skewed_rmw_bench.cu
competitors/cuCollections/: CMakeLists.txt  Makefile  cucoBench.cu
competitors/warpcore/: README.md
competitors/warpcore/benchmarks/include/: benchmark_common.cuh
competitors/warpcore/benchmarks/src/: bucket_list_benchmark.cu  multi_value_benchmark.cu  single_value_benchmark.cu
competitors/warpcore/examples/src/: basic_usage_from_host.cu  multi_value_hash_table.cu
competitors/warpcore/tests/include/: catch.hpp
include/: GPUTimer.h  HashPolicies.cuh  check.cuh  cuda_helper.cuh  hash.hpp  hashTableBenchmark.h  hash_table_struct.h  hive_hash_atomicInc.cuh  hive_hash_concurrent.cuh  hive_hash_delete.cuh  hive_hash_insert.cuh  hive_hash_lookup.cuh  hive_hash_resize.cuh  hive_hash_table.cuh  hive_hash_table_struct.cuh  hive_kernels.cuh  hive_stash_table.cuh  kernels.cuh  linear_probe_ht.cuh  utils.h  warpspeed.cuh  zipf_distribution.h
scripts/: BSP_workload_experiment.py  benchmark_utils.py  concurrent_phase_workload_experiment.py  data_layout_experiments_concurrent_mix.py  data_layout_experiments_insert_only.py  data_layout_experiments_lookup_only.py  dynamic_resizing_experiment.py  insertion_breakdown_experiment.py  probing_experiment.py  slabhash_skewed_rmw.py  sweep_load_factor_and_exist_ratio_experiment.py  ycsb_workload_experiment.py
src/: GPUTimer.cc  hashTableBenchmark.cc  hive_dispatch.cu  hive_hash_table.cu  hive_memory.cu  kernels.cu  linear_probe_ht.cu  warpspeed.cu
